Big text on mobile version and some minor CSS fixes 2

--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -129,6 +129,10 @@ overflow: hidden;
 }
 */
 
+.title-header {
+	font-size: 1em;
+}
+
 .news-body h2 {
 	font-size: 25px;
 }
